Fix and validate paper references
- Update FAB reference with correct arXiv URL (2508.00828)
- Add proper BizFinBench v2 reference (arXiv:2601.06401)
- Update A2A Protocol reference to GitHub repo
- All classic finance papers verified (Black-Scholes, Merton, Heston)
- MCP reference URL validated

--- a/paper/agentbusters.tex
+++ b/paper/agentbusters.tex
@@ -76,11 +76,11 @@ We address these limitations with CIO-Agent FAB++, a dynamic benchmark system th
 
 \subsection{Financial Benchmarks}
 
-The Finance Agent Benchmark (FAB) \citep{fab2024} introduced structured evaluation of AI agents on earnings analysis tasks. BizFinBench \citep{bizfinbench2024} expanded coverage to include Chinese financial markets and multi-turn reasoning. However, these benchmarks use static question sets vulnerable to data contamination.
+The Finance Agent Benchmark (FAB) \citep{fab2025} introduced structured evaluation of AI agents on earnings analysis tasks. BizFinBench \citep{bizfinbench2025} expanded coverage to include Chinese financial markets and multi-turn reasoning. However, these benchmarks use static question sets vulnerable to data contamination.
 
 \subsection{Agent Communication Protocols}
 
-The Agent-to-Agent (A2A) protocol \citep{a2a2024} standardizes communication between AI agents, enabling interoperability across different implementations. The Model Context Protocol (MCP) \citep{mcp2024} provides a unified interface for agents to access external tools and data sources.
+The Agent-to-Agent (A2A) protocol \citep{a2a2025} standardizes communication between AI agents, enabling interoperability across different implementations. The Model Context Protocol (MCP) \citep{mcp2024} provides a unified interface for agents to access external tools and data sources.
 
 \subsection{Options Pricing Models}
 
@@ -458,20 +458,22 @@ Heston, S.~L. (1993).
 \newblock A closed-form solution for options with stochastic volatility with applications to bond and currency options.
 \newblock \emph{The Review of Financial Studies}, 6(2):327--343.
 
-\bibitem[FAB(2024)]{fab2024}
-Finance Agent Benchmark (2024).
-\newblock FAB: A benchmark for evaluating AI agents on financial analysis tasks.
-\newblock \url{https://github.com/financial-agent-benchmark/FAB}.
+\bibitem[Bigeard et al.(2025)]{fab2025}
+Bigeard, A., Nashold, L., Krishnan, R., and Wu, S. (2025).
+\newblock Finance Agent Benchmark: Benchmarking LLMs on Real-world Financial Research Tasks.
+\newblock \emph{arXiv preprint arXiv:2508.00828}.
+\newblock \url{https://arxiv.org/abs/2508.00828}.
 
-\bibitem[BizFinBench(2024)]{bizfinbench2024}
-HiThink Research (2024).
-\newblock BizFinBench: A comprehensive benchmark for financial AI.
-\newblock \emph{Technical Report}.
+\bibitem[Lu et al.(2025)]{bizfinbench2025}
+Lu, G., Guo, X., Zhang, R., Zhu, W., and Liu, J. (2025).
+\newblock BizFinBench.v2: A Unified Dual-Mode Bilingual Benchmark for Expert-Level Financial Capability Alignment.
+\newblock \emph{arXiv preprint arXiv:2601.06401}.
+\newblock \url{https://arxiv.org/abs/2601.06401}.
 
-\bibitem[A2A Protocol(2024)]{a2a2024}
-Google (2024).
-\newblock Agent-to-Agent Protocol Specification.
-\newblock \url{https://a2a-protocol.org/}.
+\bibitem[A2A Protocol(2025)]{a2a2025}
+Google and Linux Foundation (2025).
+\newblock Agent-to-Agent Protocol: An open protocol enabling communication and interoperability between opaque agentic applications.
+\newblock \url{https://github.com/a2aproject/A2A}.
 
 \bibitem[MCP(2024)]{mcp2024}
 Anthropic (2024).
